# tldrx

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE-MIT  LICENSE-MulanPSL  README.md  README.zh.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml
benches/: Dockerfile
src/: cache.rs  config.rs  lib.rs  main.rs  page.rs  platform.rs  style.rs
