[package]
name = "tldrx"
version = "0.2.0"
edition = "2021"
license = "MIT OR MulanPSL-2.0"
readme = "README.md"
repository = "https://github.com/tldrx/tldrx"
documentation = "https://github.com/tldrx/tldrx"
keywords = ["tldr", "tldr-pages"]
categories = ["command-line-utilities"]
include =["/src", "/docs", "/Cargo.*", "/README.md", "README.zh.md", "/LICENSE-*", "CHANGELOG.md"]
description = """
A tldr pages client support private pages.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "4.0"
walkdir = "2"
anyhow = "1.0"
crossterm = "0.23"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "socks", "rustls-tls-native-roots"] }
zip = { version = "0.6", default-features = false, features= ["deflate"] }


[dev-dependencies]
lazy_static = "1.4.0"